# magerpol

./: .gitignore  README.MD  ext.gdextension  ext.gdextension.uid  project.godot  run.sh
Assets/Joystick/: JoystickSplitted.png.import  SmallHandle.png.import
Client/: .clangd  icon.svg.import  project.godot  run.sh
Client/Scenes/Main/: Main.gd  Main.gd.uid  Main.tscn  main.gd
Client/Scenes/Player/: Player.tscn
Client/Scenes/UI/: Joystick.tscn
Client/Scenes/World/: ACT00.tscn
Client/Scripts/UI/: JOYSTICK.MD  Joystick.cpp  Joystick.gd.uid  Joystick.h
Client/Scripts/Utils/: JoystickToPlayer.gd  JoystickToPlayer.gd.uid
Client/cpp/: .sconsign.dblite  README.MD  SConstruct  pch.h  register_types.cpp  register_types.h  register_types.os
Client/cpp/Core/: Config.cpp  Config.h  Config.os  CoordinateSystem.cpp  CoordinateSystem.h  EventBus.h  EventBus.os  FileSystem.cpp  FileSystem.h  FileSystem.os  GridSystem.cpp  GridSystem.h  Logger.cpp  Logger.h  Logger.os  MapManager.cpp  MapManager.h  Profiler.cpp  Profiler.h  Profiler.os  Time.h  (+10 more)
Server/: CMakeLists.txt
Server/src/: main.cpp
Server/src/game/: enemy.cpp  enemy.h  player.cpp  player.h  world.cpp  world.h
Server/src/map/: map.h
Server/src/network/: packet.h  server.cpp  server.h  session.cpp  session.h
Server/src/utils/: logger.cpp  logger.h
UI/Joystick/: Joystick.tscn
World/Entities/: Client.tscn  Player.tscn
cpp/: .sconsign.dblite  SConstruct  register_types.cpp  register_types.h
cpp/Input/: Joystick.gd
cpp/Player/: Client.gd  Client.gd.uid  InputHandler.cpp  InputHandler.h  Rotation.cpp
(+78 files in other folders)
